Used flexbox instead of floats

--- a/Week3/Day1/index.html
+++ b/Week3/Day1/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <nav>
-        <h2 class="left"> For Real Finances</h2>
-        <div class="right">
+        <h2> For Real Finances</h2>
+        <div class="navLinks">
             <a href="#">Home</a>
             <a href="#">Product</a>
             <a href="#">Pricing</a>
