I think this is the end

--- a/Final/index.html
+++ b/Final/index.html
@@ -13,16 +13,7 @@
         <p><strong>Trying to decide career? Programming is the move. Change my mind </strong> </p>
     </div>
     <div class="commentContainer">
-        <div class="userComment">
-            <img src="Daco_2478382.png" class="profileImage" alt="">
-            <div class="user">
-                <h4>asdf </h4>
-            </div>
-            <p class="userPara"> I agree actually. </p>
-            <div class="editContainer">
-           <a href="#" class="edit">Edit</a>
-            <a href="#" class="delete"> Delete</a>
-        </div>
+        
             </div>
     </div>
     
@@ -31,6 +22,10 @@
         <input type="text" id="displayName" placeholder="display name">
         <input type="text" id="comment" placeholder="comment">
         <button type="submit" id="submit"> Post </button>
+    </div>
+    <div class="hidden" style="display:none;">
+        <input type="text" placeholder="Enter your new comment">
+        <button type="submit"> Post</button>
     </div>
 
 
